syntax = "proto3";
package euc_backend;

import "google/protobuf/timestamp.proto";
import "enumps.proto";

message GetAreaConditionRequest {
  optional int32 id = 1;
  optional string name = 2;
  optional string slug = 3;
  optional int32 page =10;
  optional int32 limit =11;
  optional bool is_extra_club =12;
  optional bool is_extra_member =13;
  optional bool is_deleted =14;
}

message CreateAreaRequest {
  string name = 2;
}

message UpdateAreaDataRequest {
  optional string name = 2;
}

message UpdateAreaRequest {
  GetAreaConditionRequest conditions =1;
  UpdateAreaDataRequest data =2;
}

message RemoveAreaRequest {
  int32 id = 1;
}
