syntax = "proto3";
package euc_backend;


import "place/place.proto";

message PlaceReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional Place payload = 4;
}

message PlaceListDataReply {
  repeated Place place_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message PlaceListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  PlaceListDataReply payload = 4;
}
